welcome.lessons.welcome.summative.Moria.scala.code
def degageRocher(){
  while(!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  retourne()
  while(!estSurBiscuit()){avance()}
  recule()
  poseBiscuit()
  retourne()
}

override def moria(){
  retourne()
  while(!estFaceMur()){degageRocher()}
  droite()
  avance()
  gauche()
  avance()
}